--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ListActivity"></activity>
+        <activity android:name=".TimerActivity"></activity>
+        <activity android:name=".ListActivity" />
         <activity android:name=".AddActivity" />
         <activity
             android:name=".MainActivity"
