--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,22 +9,32 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <service
-            android:name=".TimerService"
-            android:enabled="true"
-            android:exported="true"></service>
-
-        <activity android:name=".TimerActivity" android:screenOrientation="portrait"/>
-        <activity android:name=".ListActivity" />
-        <activity android:name=".AddActivity" />
-        <activity
-            android:name=".MainActivity"
-            android:label="Таймер">
+        <activity android:name=".SplashActivity" android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity android:name=".SettingsActivity" />
+
+        <service
+            android:name=".TimerService"
+            android:enabled="true"
+            android:exported="true" />
+
+        <activity
+            android:name=".TimerActivity"
+            android:screenOrientation="portrait" />
+<!--
+        <activity android:name=".MainActivity" />
+-->
+        <activity android:name=".AddActivity" />
+        <activity
+            android:name=".MainActivity"
+            android:label="Таймер">
+
         </activity>
     </application>
 
